добавил параграф в main

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Titile Goit</title>
 </head>
 <body>
+    <p class="life">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae assumenda possimus perspiciatis dolor amet, iste veniam inventore repudiandae sit eius dolores laboriosam obcaecati, dignissimos molestiae, soluta facere rem. Cupiditate, nemo?</p>
     
 </body>
 </html>
